// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and information 1`] = `
{
  "data": {
    "apiID": "test-collection-type",
    "schema": {
      "attributes": {
        "title": {
          "pluginOptions": {
            "i18n": {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_collection_types",
      "description": "",
      "displayName": "Test Collection Type",
      "draftAndPublish": false,
      "kind": "collectionType",
      "pluginOptions": {
        "i18n": {
          "localized": true,
        },
      },
      "pluralName": "test-collection-types",
      "restrictRelationsTo": null,
      "singularName": "test-collection-type",
      "visible": true,
    },
    "uid": "api::test-collection-type.test-collection-type",
  },
}
`;

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and informations with draftAndPublish 1`] = `
{
  "data": {
    "apiID": "ct-with-dp",
    "schema": {
      "attributes": {
        "title": {
          "type": "string",
        },
      },
      "collectionName": "ct_with_dps",
      "description": "",
      "displayName": "CT with DP",
      "draftAndPublish": true,
      "kind": "collectionType",
      "pluralName": "ct-with-dps",
      "restrictRelationsTo": null,
      "singularName": "ct-with-dp",
      "visible": true,
    },
    "uid": "api::ct-with-dp.ct-with-dp",
  },
}
`;
